<resources>
    <string name="app_name">生物试题库管理系统</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="create_exam">增加試卷</string>
    \<string name="exam_repo">试卷库</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
_
    <string name="username_empty_alert">用户名不能为空！！！</string>
    <string name="pwd_empty_alert">密码不能为空！！！</string>

    <string name="title_empty_alert">题目不能为空！！！</string>
    <string name="option_pwd_empty_alert">选择项不能为空！！！</string>
    <string name="answer_empty_alert">答案不能为空！！！</string>

    <string name="question_type">请选择题目类型</string>

    <string name="exam_title">试卷名称</string>

    <string name="single_count">单选题数目</string>
    <string name="multi_count">多选题数目</string>


    <string name="answer_a">答案A</string>
    <string name="answer_b">答案B</string>
    <string name="answer_c">答案C</string>
    <string name="answer_d">答案D</string>

    <string name="string_a">A</string>
    <string name="string_b">B</string>
    <string name="string_c">C</string>
    <string name="string_d">D</string>

</resources>
