<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="题目" />

    <EditText
        android:id="@+id/et_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_a" />
    <EditText
        android:id="@+id/et_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_b" />
    <EditText
        android:id="@+id/et_C"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_c" />
    <EditText
        android:id="@+id/et_D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_d" />

    <RadioGroup
        android:id="@+id/rgroup_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbtn_a"
            android:text="A"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbtn_b"
            android:text="B"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbtn_c"
            android:text="C"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbtn_d"
            android:text="D"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_multi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="A"/>
        <CheckBox
            android:id="@+id/cb_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="B"/>
        <CheckBox
            android:id="@+id/cb_c"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="C"/>
        <CheckBox
            android:id="@+id/cb_d"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="D"/>
    </LinearLayout>


</LinearLayout>