<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:id="@+id/textinputlayout_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:id="@+id/textinputlayout_pwd"
        android:layout_below="@+id/textinputlayout_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textinputlayout_pwd"
        android:id="@+id/rgroup"
        >
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:id="@+id/rbtn_admin"
            android:text="管理员"
            />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbtn_user"
            android:text="考生"/>

    </RadioGroup>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:theme="@style/AppTheme.Button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rgroup"
        android:id="@+id/btn_login"/>

</RelativeLayout>